--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: FIXME (brief name of host site)
-address: FIXME (street address of host site)
-country: FIXME (country (hyphenated if need be, like 'United-Kingdom')
-language: FIXME (language code like 'en' or 'fr' - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: (fractional latitude and longitude like 41.7901128,-87.6007318; you can use http://www.latlong.net/)
-humandate: FIXME (use the format 'Feb 17-18, 2020' (without the quotes))
-humantime: FIXME (use the format '9:00 am - 4:30 pm' (without the quotes))
-startdate: FIXME (use YYYY-MM-DD format like 2015-01-01)
-enddate: FIXME (use YYYY-MM-DD format like 2015-01-02)
-instructor: (list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
-helper: (list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
-contact: FIXME (contact email address for workshop organizer)
-etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
-eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
+venue: South Florida Water Management District (brief name of host site)
+address: West Palm Beach, FL (street address of host site)
+country: United-States (country (hyphenated if need be, like 'United-Kingdom')
+language: en (language code like 'en' or 'fr' - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: 26.675907,-80.095131 (fractional latitude and longitude like 41.7901128,-87.6007318; you can use http://www.latlong.net/)
+humandate: Jul 21, 2016 (use the format 'Feb 17-18, 2020' (without the quotes))
+humantime: 9:00 am - 1:30 pm (use the format '9:00 am - 4:30 pm' (without the quotes))
+startdate: 2016-07-21 (use YYYY-MM-DD format like 2015-01-01)
+enddate: 2016-07-21 (use YYYY-MM-DD format like 2015-01-02)
+instructor: ["Joseph Stachelek", "Christa Zweig"](list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
+helper: ["TBA"](list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
+contact: jstachel@sfwmd.gov (contact email address for workshop organizer)
 day1_am: "Data organization in spreadsheets and OpenRefine"
-day1_pm: "Introduction to R"
-day2_am: "Data analysis and visualization in R"
-day2_pm: "SQL for data management"
 ---
 <!--
   HEADER
