--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 ---
 layout: workshop
 root: .
-venue:       FIXME    #(brief name of host site)
-address:     FIXME    #(street address of home location)
-country:     FIXME    #(country (hyphenated if need be, like 'United-Kingdom')
-language:    FIXME    #(language code like 'en' or 'fr')
-latlng:      FIXME    #(fractional latitude and longitude like 41.7901128,-87.6007318)
-humandate:   FIXME    #(use the format 'Feb 17-18, 2020' (without the quotes)
-humantime:   FIXME    #(use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate:   FIXME    #(use YYYY-MM-DD format like 2015-01-01)
-enddate:     FIXME    #(use YYYY-MM-DD format like 2015-01-02)
-instructor: [FIXME]   #(list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
-helper:     [FIXME]   #(list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
-contact:     FIXME    #(contact email address for workshop organizer)
-etherpad:    FIXME    #(insert the URL for your Etherpad if you're using one)
-eventbrite:  FIXME    #(delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
-day1_am: "Data organization in spreadsheets and OpenRefine"
-day1_pm: "Introduction to R"
-day2_am: "Data analysis and visualization in R"
-day2_pm: "SQL for data management"
+venue: South Florida Water Management District
+address: West Palm Beach, FL
+country: United-States
+language: en
+latlng: 26.675907,-80.095131
+humandate: July 21, 2016
+humantime: 9:00 am - 1:30 pm
+startdate: 2016-07-21
+enddate: 2016-07-21
+instructor: ["Joseph Stachelek", "Christa Zweig"]
+helper: ["TBA"]
+contact: jstachel@sfwmd.gov
+etherpad:
+eventbrite: 
+day1_am: "Working with vector and raster data in R"
+day1_pm: "Working with vector and raster data in R"
 ---
 <!--
   HEADER
@@ -61,7 +59,7 @@ This hands-on workshop teaches basic concepts, skills and tools for working more
 effectively with data. 
 </p>
 <p>
-We will cover {{page.day1_am}}, {{page.day1_pm}}, {{page.day2_am}} and {{page.day2_pm}}.
+We will cover {{page.day1_am}}.
 
 Participants should bring their laptops and plan to participate actively. By the end of the workshop learners should be able to more effectively manage and analyze data and be able to apply the tools and approaches directly to their ongoing research.
 </p>
@@ -74,7 +72,7 @@ Participants should bring their laptops and plan to participate actively. By the
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at SFWMD researchers.
 </p>
 
 <!--
@@ -102,9 +100,7 @@ Participants should bring their laptops and plan to participate actively. By the
   Modify the block below if there are any special requirements.
 -->
 <p>
-  <strong>Requirements:</strong> Participants must bring a laptop with a 
-  Mac, Linux, or Windows operating sytem (not a tablet, Chromebook, etc.) that they have administrative privileges
-  on. They should have a few specific software packages installed (listed
+  <strong>Requirements:</strong> Participants must bring a laptop with a few specific software packages installed (listed
   <a href="#setup">below</a>). They are also required to abide by
   Data Carpentry's
   <a href="{{site.dc_site}}/code-of-conduct/">Code of Conduct</a>.
@@ -153,15 +149,8 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day1_am}}</td> </tr>
-       <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
     </table>
- 
- 
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>Morning</td>  <td>{{page.day2_am}}</td> </tr>
-      <tr> <td>Afternoon</td>  <td>{{page.day2_pm}}</td> </tr>
-    </table>
+    
  </div>
 </div>
 
