--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ helper: ["TBA"]
 contact: jstachel@sfwmd.gov
 etherpad:
 eventbrite: 
-day1_am: "Working with vector and raster data in R"
+day1_am: "working with vector and raster data in R"
 day1_pm: "Working with vector and raster data in R"
 ---
 <!--
@@ -149,6 +149,7 @@ Participants should bring their laptops and plan to participate actively. By the
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day1_am}}</td> </tr>
+      <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
     </table>
     
  </div>
